Bug 150621 - Word count incorrect for Korean text
Summary: Word count incorrect for Korean text
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.4.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0
Keywords:
Depends on:
Blocks: Word-Count CJK-Korean
  Show dependency treegraph
 
Reported: 2022-08-26 11:25 UTC by chansol98s
Modified: 2024-07-17 13:48 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description chansol98s 2022-08-26 11:25:10 UTC
Description:
Libreoffice Writer counts every Korean character as a word, which results in incorrect word counts for Korean text.

Steps to Reproduce:
1. In Writer, input any text in Korean. For example, "이 문장은 여섯 단어로 이루어져 있습니다."
2. Check the word count at Tools > Word Count

Actual Results:
The word count is incorrect, counting every Korean character as a word. For the above example, the word count shows up as 18.

Expected Results:
The word count should only count words, not characters. For the above example, the word count should be 6.


Reproducible: Always


User Profile Reset: No



Additional Info:
In Korean writing, a word is defined the same way as English, so a string of characters separated by a space counts as a single word. 

Some more examples:
아주 짧은 예시  //Actual 3 words, Writer counts 6.
이 문장은 여섯 단어로 이루어져 있습니다.  //Actual 6 words, Writer counts 18.
예시로, 이런 문장도 가능하겠지요?  //Actual 4 words, Writer counts 16.


Version: 7.3.4.2
Build ID: 30(Build:2)
CPU threads: 12; OS: Linux 5.18; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Michael Warner 2022-08-26 14:25:29 UTC
Repro in:
Version: 7.4.0.2 / LibreOffice Community
Build ID: 1512ce97d7ed39dce3121f7e15651fd8895f950e
CPU threads: 10; OS: Mac OS X 12.5; UI render: default; VCL: osx
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 2 J_A 2024-05-07 03:05:35 UTC
This bug is still present.

Tested using:
Version: 24.2.2.2 (X86_64) / LibreOffice Community
Build ID: d56cc158d8a96260b836f100ef4b4ef25d6f1a01
CPU threads: 16; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

and

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bc7501d30ab9a3a5edec66d2f0022177f85d6127
CPU threads: 16; OS: Windows 10 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 3 Commit Notification 2024-07-17 13:46:10 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/aa938fe03cfb968f7f4ed9760dcbe579a74bdc02

tdf#150621 Changed Korean word counting to use words

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.