editeng/source/editeng/impedit4.cxx
@@ -2904,7 +2904,8 @@ EditSelection ImpEditEngine::TransliterateText( const EditSelection& rSelection,
             }
 
             i18n::Boundary aCurWordBndry( aSttBndry );
-            while (aCurWordBndry.endPos && aCurWordBndry.startPos <= aEndBndry.startPos)
+            while (aCurWordBndry.startPos != aCurWordBndry.endPos
+                   && aCurWordBndry.startPos <= aEndBndry.startPos)
             {
                 nCurrentStart = aCurWordBndry.startPos;
                 nCurrentEnd   = aCurWordBndry.endPos;
